@@ -10,3 +10,4 @@
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/Makefile.am;  diff -u /dev/null src/doc_info.xpm;  ) > 0.2.0cvs4.patchset
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/poppler_viewer.c;  ) > 0.2.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/poppler_viewer.c;  ) > 0.2.0cvs6.patchset
+( cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/poppler_viewer.c;  ) > 0.2.0cvs7.patchset
